BERTweet_Fake news_0_2000.ipynb

--- a/BERTweet/BERTweet_Fake news_0_2000.ipynb
+++ b/BERTweet/BERTweet_Fake news_0_2000.ipynb
@@ -497,7 +497,7 @@
     "# # Split the original training data into a subset for validation and the rest for training\n",
     "# train_texts, val_texts, train_labels, val_labels = train_test_split(train_text, train_labels, test_size=0.2, random_state=42)\n",
     "\n",
-    "# model = fine_tune_bertweet_for_rumor_detection(train_texts[0:2000], train_labels[0:2000], val_texts, val_labels)\n"
+    "model = fine_tune_bertweet_for_rumor_detection(train_texts[0:2000], train_labels[0:2000], val_texts, val_labels)\n"
    ]
   },
   {
@@ -727,7 +727,7 @@
     "\n",
     "model_name = \"AbdelrahmanMosly1/bertweet_rumor_detection_model\"\n",
     "loaded_model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
-    "loaded_tokenizer = AutoTokenizer.from_pretrained(model_name)\n"
+    "loaded_tokenizer = AutoTokenizer.from_pretrained(model_name)"
    ]
   },
   {
@@ -1620,11 +1620,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_db5c8ceccc2f499a989425a2f3b9e84e",
-       "max": 2912687.0,
-       "min": 0.0,
+       "max": 2912687,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_b7ec8faabbce4a97b5572c4a0e5e0b93",
-       "value": 2912687.0
+       "value": 2912687
       }
      },
      "0aa202c3a3d644b09198d2c6a40bded1": {
@@ -2551,11 +2551,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_f3a1b39a1e3e42c3a41b0edd4819ad64",
-       "max": 1171.0,
-       "min": 0.0,
+       "max": 1171,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_1dd09774ebc846ccb526d9f675149b9b",
-       "value": 1171.0
+       "value": 1171
       }
      },
      "56235d79ef864e6ba6a62271b6e40321": {
@@ -2961,11 +2961,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_2fc5ca05312545a189116e119f342639",
-       "max": 843438.0,
-       "min": 0.0,
+       "max": 843438,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_c2463485a33f4978be765b1d55db900e",
-       "value": 843438.0
+       "value": 843438
       }
      },
      "697b66e01826491d995e137bc9c9fbb2": {
@@ -3253,11 +3253,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_935e18ff715b4c4a89c965f46dcbc13b",
-       "max": 558.0,
-       "min": 0.0,
+       "max": 558,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_319400aadd7e40efa21cb55ddce08cb4",
-       "value": 558.0
+       "value": 558
       }
      },
      "7f3572711a014c68acc213967bac194b": {
@@ -3345,11 +3345,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_1f9974fa42154c63af3f9514a6354799",
-       "max": 1078931.0,
-       "min": 0.0,
+       "max": 1078931,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_15a16062b56c460f96cf68cb5a487f5d",
-       "value": 1078931.0
+       "value": 1078931
       }
      },
      "870800bf02d64d39bb587445bdbb58c3": {
@@ -4638,11 +4638,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_5055f2b255b94a60912b320307e88412",
-       "max": 1078931.0,
-       "min": 0.0,
+       "max": 1078931,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_0aa202c3a3d644b09198d2c6a40bded1",
-       "value": 1078931.0
+       "value": 1078931
       }
      },
      "db06c89e3ec640a78868f22f24d96398": {
@@ -4870,11 +4870,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_5f4327be9d9e432d845e5084f4ac0d0e",
-       "max": 770.0,
-       "min": 0.0,
+       "max": 770,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_9593a6714a8c4e468f99018d0b897bde",
-       "value": 770.0
+       "value": 770
       }
      },
      "e08f874c2e8a4ce7b566ff71e3413ed9": {
@@ -4946,11 +4946,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_8b7f68b926e74831a399e4868df8e9c9",
-       "max": 22.0,
-       "min": 0.0,
+       "max": 22,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_6c63f0e2f9124a6097ec968af71173a2",
-       "value": 22.0
+       "value": 22
       }
      },
      "e55529d3145b4973a152abc246eb4550": {
@@ -5074,11 +5074,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_1d8ec3522d0c4d8698d1fdd611c281f2",
-       "max": 539630168.0,
-       "min": 0.0,
+       "max": 539630168,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_f0f9a5497f63488bbdafac61b1df84ba",
-       "value": 539630168.0
+       "value": 539630168
       }
      },
      "ec83af425d804d40a62c72d46152990a": {
@@ -5113,11 +5113,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_a73ef51d0b704875a7e59456fae7c4ad",
-       "max": 167.0,
-       "min": 0.0,
+       "max": 167,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_dc84e353428a4cf08ac7289f0ecf65e7",
-       "value": 167.0
+       "value": 167
       }
      },
      "f0f9a5497f63488bbdafac61b1df84ba": {
@@ -5270,11 +5270,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_139a1f95736640b895e7ed24002816d6",
-       "max": 843438.0,
-       "min": 0.0,
+       "max": 843438,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_82d3c3e6712d4507af80b674d5ffa4ae",
-       "value": 843438.0
+       "value": 843438
       }
      },
      "fc847885c573409eb388fd582a956910": {
