problem validation was assigned to test by mistake

--- a/BERTweet/BERTweet_Merged_Twitter15-16.ipynb
+++ b/BERTweet/BERTweet_Merged_Twitter15-16.ipynb
@@ -538,8 +538,8 @@
     "train_labels = train_df.iloc[:, 2].tolist()\n",
     "test_text = test_df.iloc[:, 1].tolist()\n",
     "test_labels = test_df.iloc[:, 2].tolist()\n",
-    "val_text = test_df.iloc[:, 1].tolist()\n",
-    "val_labels = test_df.iloc[:, 2].tolist()"
+    "val_text = val_df.iloc[:, 1].tolist()\n",
+    "val_labels = val_df.iloc[:, 2].tolist()"
    ]
   },
   {
@@ -1416,11 +1416,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_8bf34265357b4b55a6a505eb7793f4f4",
-       "max": 2912687.0,
-       "min": 0.0,
+       "max": 2912687,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_e660101d64214971b9aaf8d36f6aa11f",
-       "value": 2912687.0
+       "value": 2912687
       }
      },
      "1f48e596d79b40e6a1b9d50df87e10e9": {
@@ -2008,11 +2008,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_66339e6045f3484e9069592ee3f6f56f",
-       "max": 558.0,
-       "min": 0.0,
+       "max": 558,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_db9b95418ec54535bc1f904544b84fed",
-       "value": 558.0
+       "value": 558
       }
      },
      "6db76feab2f04449a0578c383594feb6": {
@@ -2866,11 +2866,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_2cf7161f676e484eb8cce3478128e4d4",
-       "max": 843438.0,
-       "min": 0.0,
+       "max": 843438,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_8799924273f14adca43afd67afb1530f",
-       "value": 843438.0
+       "value": 843438
       }
      },
      "cbcf08019aa543a4ab4c3f5c21365e7a": {
@@ -2989,11 +2989,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_a91fc244b1b643cc8adcb05a00e94e39",
-       "max": 1078931.0,
-       "min": 0.0,
+       "max": 1078931,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_53582f45b7ce4569abdf321c5a85aaf2",
-       "value": 1078931.0
+       "value": 1078931
       }
      },
      "ecb0866ee2b8491388339c21e885ae0a": {
@@ -3065,11 +3065,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_5d0d3d186077458cae4aa02bf435fc14",
-       "max": 542529064.0,
-       "min": 0.0,
+       "max": 542529064,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_0bcbe39f2d1042e2940ba2a8349ae48a",
-       "value": 542529064.0
+       "value": 542529064
       }
      }
     },
