--- a/BERTweet/bertweet-fake-news-continue-twitter.ipynb
+++ b/BERTweet/bertweet-fake-news-continue-twitter.ipynb
@@ -477,8 +477,8 @@
     "train_labels = train_df.iloc[:, 2].tolist()\n",
     "test_text = test_df.iloc[:, 1].tolist()\n",
     "test_labels = test_df.iloc[:, 2].tolist()\n",
-    "val_text = test_df.iloc[:, 1].tolist()\n",
-    "val_labels = test_df.iloc[:, 2].tolist()"
+    "val_text = val_df.iloc[:, 1].tolist()\n",
+    "val_labels = val_df.iloc[:, 2].tolist()"
    ]
   },
   {
